--- a/index.html
+++ b/index.html
@@ -1,11 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alpha Clash</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="styles/style.css" />
+    <!-- Desi Ui and Tailwind Css -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="poppins-font">
+    <main
+      class="bg-[#1E1E1E] min-h-screen bg-[url(images/background.png)] bg-no-repeat bg-center"
+    >
+      <!-- Start Home section -->
+      <section id="home-screen"
+        class="text-white min-h-screen flex justify-center items-center"
+      >
+        <div class="flex flex-col items-center gap-8">
+          <h1 class="anton-font text-9xl uppercase">Alpha Clash Pro</h1>
+          <p class="text-2xl">
+            Unleash Your Keyboard Kung Fu : Press “Enter” to Play
+          </p>
+          <button onclick="play()"
+            class="px-8 py-4 font-semibold text-2xl bg-white text-black rounded-lg hover:bg-black hover:text-white"
+          >
+            Paly Now
+          </button>
+        </div>
+      </section>
+      <!-- End Home section -->
+      <!-- Start Play Ground section -->
+      <section class="min-h-screen flex justify-center items-center hidden">
+        <div class="flex flex-col items-center gap-28">
+          <!-- screen -->
+          <div class="">
+            <div
+              class="artboard artboard-horizontal phone-6 border-[28px] border-[#010313cc] rounded-2xl bg-[#ffffffb3]"
+            >
+              <div class="flex justify-center">
+                <p
+                  class="text-white font-semibold bg-[#2F2941] px-8 pb-4 rounded-b-xl"
+                >
+                  Don't watch keyboard while playing...
+                </p>
+              </div>
+              <div class="flex justify-center items-center h-full">
+                <p class="text-black text-9xl font-bold">Y</p>
+              </div>
+            </div>
+          </div>
+          <!-- keyboard -->
+          <div class="">
+            <div class="flex justify-center gap-1 my-1 w-full">
+              <kbd class="kbd">q</kbd>
+              <kbd class="kbd">w</kbd>
+              <kbd class="kbd">e</kbd>
+              <kbd class="kbd">r</kbd>
+              <kbd class="kbd">t</kbd>
+              <kbd class="kbd">y</kbd>
+              <kbd class="kbd">u</kbd>
+              <kbd class="kbd">i</kbd>
+              <kbd class="kbd">o</kbd>
+              <kbd class="kbd">p</kbd>
+            </div>
+            <div class="flex justify-center gap-1 my-1 w-full">
+              <kbd class="kbd">a</kbd>
+              <kbd class="kbd">s</kbd>
+              <kbd class="kbd">d</kbd>
+              <kbd class="kbd">f</kbd>
+              <kbd class="kbd">g</kbd>
+              <kbd class="kbd">h</kbd>
+              <kbd class="kbd">j</kbd>
+              <kbd class="kbd">k</kbd>
+              <kbd class="kbd">l</kbd>
+            </div>
+            <div class="flex justify-center gap-1 my-1 w-full">
+              <kbd class="kbd">z</kbd>
+              <kbd class="kbd">x</kbd>
+              <kbd class="kbd">c</kbd>
+              <kbd class="kbd">v</kbd>
+              <kbd class="kbd">b</kbd>
+              <kbd class="kbd">n</kbd>
+              <kbd class="kbd">m</kbd>
+              <kbd class="kbd">/</kbd>
+            </div>
+          </div>
+          <!-- score -->
+          <div class="flex justify-between w-[1070px]">
+            <button
+              class="flex gap-3 text-xl font-medium text-white py-4 px-9 bg-[#894189] rounded-[30px] hover:bg-[#89418999]"
+            >
+              Life <img src="images/hart.png" alt="" /><span>1</span>
+            </button>
+            <button
+              class="flex gap-3 text-xl font-medium text-white py-4 px-9 bg-[#360490] rounded-[30px] hover:bg-[#36049099]"
+            >
+              Score <img src="images/dollar.png" alt="" /><span>1</span>
+            </button>
+          </div>
+        </div>
+      </section>
+      <!-- End Play Ground section -->
+      <section class="score min-h-screen flex justify-center items-center hidden">
+        <div
+          class="items-center text-center space-y-6 text-white px-12 py-11 bg-[#ffffff32] rounded-2xl"
+        >
+          <h2 class="text-6xl font-bold">Score: <span>14</span></h2>
+          <button
+            class="px-8 py-4 font-semibold text-2xl bg-white text-black rounded-lg hover:bg-black hover:text-white"
+          >
+            Paly Now
+          </button>
+          <p class="text-2xl">Practice will make you Pro</p>
+        </div>
+      </section>
+    </main>
+
+    <script src="scripts/alpha-clash.js"></script>
+  </body>
 </html>
